--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,5 +1,8 @@
 name: Daily Dev Automation
 
+permissions:
+  contents: write
+
 on:
   schedule:
     - cron: "30 3 * * *"
@@ -8,15 +11,25 @@ on:
 jobs:
   automate:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: true
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: |
+
+      - name: Run automation scripts
+        run: |
           python scripts/update_activity.py
           python scripts/update_learning.py
-      - run: |
+
+      - name: Commit and push changes
+        run: |
           git config user.name "dev-activity-bot"
           git config user.email "bot@github.com"
           git add .
