--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -3,10 +3,6 @@ name: Daily Dev Automation
 permissions:
   contents: write
 
-concurrency:
-  group: daily-dev-automation
-  cancel-in-progress: true
-
 on:
   schedule:
     - cron: "30 3 * * *"
@@ -21,7 +17,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: true
-          fetch-depth: 0
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -37,13 +32,6 @@ jobs:
         run: |
           git config user.name "dev-activity-bot"
           git config user.email "bot@github.com"
-
-          git pull --rebase origin main
           git add .
-
-          if ! git diff --cached --quiet; then
-            git commit -m "Daily automated update"
-            git push origin main
-          else
-            echo "No changes to commit"
-          fi
+          git commit -m "Daily automated update" || echo "No changes"
+          git push
