--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -8,6 +8,10 @@ on:
     - cron: "30 3 * * *"
   workflow_dispatch:
 
+concurrency:
+  group: daily-updates
+  cancel-in-progress: true
+
 jobs:
   automate:
     runs-on: ubuntu-latest
@@ -17,6 +21,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: true
+          fetch-depth: 0
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -33,5 +38,10 @@ jobs:
           git config user.name "dev-activity-bot"
           git config user.email "bot@github.com"
           git add .
-          git commit -m "Daily automated update" || echo "No changes"
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+            exit 0
+          fi
+          git commit -m "Daily automated update"
+          git pull --rebase origin main
           git push
